erDiagram

    DEPARTMENTS {
        bigint department_id PK
        text department_name UK
        text description
        timestamptz created_at
    }

    ACCOUNTS {
        bigint account_id PK
        text account_type
        bigint reseller_id FK
        text name
        text email UK
        text password_hash
        boolean is_active
        timestamptz created_at
    }

    ACTIVITY_LOGS {
        bigint activity_log_id PK
        bigint account_id FK
        text action
        text entity_type
        bigint entity_id
        timestamptz created_at
    }

    INQUIRIES {
        bigint inquiry_id PK
        text name
        text contact_number
        text email
        text business_name
        text message
        text status
        bigint assigned_team_leader_account_id FK
        bigint reviewed_by_account_id FK
        timestamptz reviewed_at
        timestamptz created_at
    }

    RESELLERS {
        bigint reseller_id PK
        bigint inquiry_id FK,UK
        text business_name
        text contact_person
        text email UK
        text contact_number
        text address
        text reseller_status
        bigint approved_by_account_id FK
        timestamptz approved_at
        timestamptz created_at
    }

    INVENTORY_ITEMS {
        bigint item_id PK
        text item_type
        text category
        text name
        text description
        text unit
        numeric base_price
        numeric quantity_available
        numeric pack_size
        text pack_size_unit
        text pack_content_status
        boolean is_active
        timestamptz created_at
    }

    INVENTORY_BATCHES {
        bigint batch_id PK
        bigint item_id FK
        text batch_code UK
        text source_type
        numeric quantity_received
        numeric quantity_available
        text unit
        date received_date
        date expiry_date
        text quality_status
        timestamptz created_at
    }

    PRODUCT_RECIPES {
        bigint recipe_id PK
        bigint product_item_id FK
        bigint material_item_id FK
        numeric quantity_required
        text unit
    }

    INVENTORY_MOVEMENTS {
        bigint movement_id PK
        bigint item_id FK
        bigint affected_batch_id FK
        bigint production_batch_id FK
        bigint order_id FK
        text movement_type
        numeric quantity_delta
        text unit
        numeric balance_before
        numeric balance_after
        bigint actor_account_id FK
        text actor_name
        text note
        timestamptz created_at
    }

    ORDERS {
        bigint order_id PK
        text order_type
        bigint reseller_id FK
        bigint created_by_account_id FK
        bigint approved_by_account_id FK
        timestamptz approved_at
        timestamptz order_date
        text status
        timestamptz fulfilled_at
        numeric total_amount
        text notes
    }

    ORDER_ITEMS {
        bigint order_item_id PK
        bigint order_id FK
        bigint product_id FK
        numeric quantity
        text unit
        numeric unit_price
        numeric line_total
    }

    SALES_REPORTS {
        bigint sales_report_id PK
        text report_source
        bigint submitted_by_account_id FK
        bigint reseller_id FK
        bigint department_id FK
        date period_start
        date period_end
        numeric total_sales
        int total_orders
        text notes
        timestamptz submitted_at
    }

    ALERTS {
        bigint alert_id PK
        text alert_type
        text severity
        bigint product_id FK
        bigint product_batch_id FK
        bigint raw_material_id FK
        text message
        text status
        timestamptz triggered_at
    }

    FORECAST_RUNS {
        bigint forecast_run_id PK
        bigint run_by_account_id FK
        text model_name
        date input_period_start
        date input_period_end
        int forecast_horizon_days
        text status
        timestamptz started_at
        timestamptz completed_at
        text notes
    }

    FORECAST_RESULTS {
        bigint forecast_result_id PK
        bigint forecast_run_id FK
        bigint product_id FK
        date forecast_date
        numeric predicted_quantity
        numeric confidence_lower
        numeric confidence_upper
        timestamptz created_at
    }

    RESELLERS |o--o| ACCOUNTS : "reseller login"
    ACCOUNTS |o--o{ ACTIVITY_LOGS : records

    ACCOUNTS |o--o{ INQUIRIES : assigned
    ACCOUNTS |o--o{ INQUIRIES : reviews
    INQUIRIES |o--o| RESELLERS : becomes
    ACCOUNTS |o--o{ RESELLERS : approves

    INVENTORY_ITEMS ||--o{ INVENTORY_BATCHES : stocked_as
    INVENTORY_ITEMS ||--o{ PRODUCT_RECIPES : "finished product"
    INVENTORY_ITEMS ||--o{ PRODUCT_RECIPES : "raw material"
    INVENTORY_ITEMS ||--o{ INVENTORY_MOVEMENTS : changes
    INVENTORY_BATCHES |o--o{ INVENTORY_MOVEMENTS : affects
    INVENTORY_BATCHES |o--o{ INVENTORY_MOVEMENTS : produced_as
    ORDERS |o--o{ INVENTORY_MOVEMENTS : fulfills
    ACCOUNTS |o--o{ INVENTORY_MOVEMENTS : performs
    INVENTORY_BATCHES |o--o{ ALERTS : triggers
    INVENTORY_ITEMS |o--o{ ALERTS : triggers

    RESELLERS |o--o{ ORDERS : places
    ACCOUNTS |o--o{ ORDERS : creates
    ACCOUNTS |o--o{ ORDERS : approves
    ORDERS ||--o{ ORDER_ITEMS : contains
    INVENTORY_ITEMS ||--o{ ORDER_ITEMS : ordered_as

    ACCOUNTS |o--o{ SALES_REPORTS : submits
    RESELLERS |o--o{ SALES_REPORTS : reports
    DEPARTMENTS |o--o{ SALES_REPORTS : reports

    ACCOUNTS |o--o{ FORECAST_RUNS : starts
    FORECAST_RUNS ||--o{ FORECAST_RESULTS : produces
    INVENTORY_ITEMS ||--o{ FORECAST_RESULTS : forecasted
